# managarm

./: .clangd  meson.build  meson_options.txt
drivers/nic/: 90-managarm-nic.rules
drivers/usb/hcds/xhci/src/: main.cpp  xhci.hpp
kernel/eir/: meson.build
kernel/eir/arch/arm/: generic.cpp  meson.build
kernel/eir/arch/arm/msm/: meson.build  msm.S  msm.cpp
kernel/eir/arch/arm/raspi4/: raspi4.cpp
kernel/eir/arch/arm/raspi5/: meson.build  raspi5.S
kernel/thor/: meson.build
kernel/thor/arch/x86/: hpet.cpp
kernel/thor/system/acpi/qacpi/: acpi.cpp  battery.cpp  ec.cpp  glue.cpp  madt.cpp  madt.hpp  pm-interface.cpp
kernel/thor/system/acpi/thor-internal/acpi/: acpi.hpp
kernel/thor/system/acpi/uacpi/: acpi.cpp  madt.cpp
kernel/thor/system/dtb/: dtb.cpp  dtb_discover.cpp
kernel/thor/system/pci/: pci_acpi_qacpi.cpp
posix/subsystem/src/: extern_socket.cpp
posix/subsystem/src/subsystem/usb/: usb.cpp
protocols/fs/: fs.bragi
protocols/fs/include/protocols/fs/: server.hpp
protocols/fs/src/: server.cpp
servers/netserver/src/: main.cpp
servers/netserver/src/ip/: ip4.cpp  ip4.hpp  tcp4.cpp  tcp4.hpp
